# libsync-py

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  Proposal.odt  README  README.org  TODO  configure.ac
adt/: Makefile.am  arr.c  arr.h  avl.c  avl.h  list.c  list.h  queue.c  queue.h  stack.c  stack.h
adt/test/: arr.c  avl.c  list.c  queue.c  stack.c
daemon/: Makefile.am  main.c
docs/: README.org  conf.py  index.rst  make.bat
src/: Makefile.am  crypt.c  crypt.h  openssl.c  openssl.h
src/connector/: base.py
tools/: Makefile.am  main.c
